--- a/baselibrary/src/main/AndroidManifest.xml
+++ b/baselibrary/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.bitcoin.juwan.baselibrary">
 
     <application>
-        <activity android:name=".ProxyActivity"></activity>
+        <activity android:name=".StubActivity"></activity>
     </application>
 
 </manifest>
